Build with JDK 17